# devenv-deployment-example

./: .gitignore  README.md  devenv.nix  manage.py  pyproject.toml
devenv_deployment/: asgi.py  settings.py  urls.py  wsgi.py
