[project]
name = "devenv-deployment"
version = "0.1.0"
description = "Example project with working C bindings!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daphne>=4.1.2",
    "django>=5.1.3",
    "endoreg-db>=0.5.3",
    "flair>=0.14.0",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pymupdf>=1.24.13",
    "spacy>=3.7.5",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.2",
]

[tool.setuptools]
packages = ["devenv_deployment"]